add components Accordion Tabs Dialog ImageInput ,install redux and saga

--- a/src/containers/DatePicker/DatePicker.css
+++ b/src/containers/DatePicker/DatePicker.css
@@ -1,9 +1,10 @@
 .react-datepicker__header--custom {
     background: var(--primaryLight);
-    color: #ffffff;
+    color: var(--primaryContrastText);
+
 }
 .react-datepicker__day-name{
-    color: var(--primaryContrastText)
+    color: var(--primaryContrastText);
 } 
 
 .react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range, .react-datepicker__month-text--selected, .react-datepicker__month-text--in-selecting-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--selected, .react-datepicker__quarter-text--in-selecting-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--selected, .react-datepicker__year-text--in-selecting-range, .react-datepicker__year-text--in-range{
@@ -28,3 +29,9 @@
 .arrowForwardIosIcon {
     color: var(--primaryContrastText);
 }
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
