--- a/src/containers/DatePicker/DatePicker.css
+++ b/src/containers/DatePicker/DatePicker.css
@@ -3,7 +3,7 @@
     color: var(--primaryContrastText);
 
 }
-.react-datepicker__day-name{
+.react-datepicker__day-name,.react-datepicker-time__header{
     color: var(--primaryContrastText);
 } 
 
@@ -14,10 +14,10 @@
     background-color: var(--primaryLight);
 }
 
-.react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover, .react-datepicker__month-text--selected:hover, .react-datepicker__month-text--in-selecting-range:hover, .react-datepicker__month-text--in-range:hover, .react-datepicker__quarter-text--selected:hover, .react-datepicker__quarter-text--in-selecting-range:hover, .react-datepicker__quarter-text--in-range:hover, .react-datepicker__year-text--selected:hover, .react-datepicker__year-text--in-selecting-range:hover, .react-datepicker__year-text--in-range:hover {
+.react-datepicker__day--selected:hover,.react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list li.react-datepicker__time-list-item--selected, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover, .react-datepicker__month-text--selected:hover, .react-datepicker__month-text--in-selecting-range:hover, .react-datepicker__month-text--in-range:hover, .react-datepicker__quarter-text--selected:hover, .react-datepicker__quarter-text--in-selecting-range:hover, .react-datepicker__quarter-text--in-range:hover, .react-datepicker__year-text--selected:hover, .react-datepicker__year-text--in-selecting-range:hover, .react-datepicker__year-text--in-range:hover {
     background-color: var(--primaryDark);
 }
-.react-datepicker__day--keyboard-selected, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected{
+.react-datepicker__day--keyboard-selected,.react-datepicker__header--time--only, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected{
     background-color: var(--primaryMain);
 }
 
@@ -29,7 +29,20 @@
 .arrowForwardIosIcon {
     color: var(--primaryContrastText);
 }
+.react-datepicker__month{
+    margin: 40px 5px;
+}
+.react-datepicker__week{
+    margin: 4px 0;
+}
+.react-datepicker__day--today {
 
+    border: 1px solid var(--primaryDark);
+    border-radius: 5px;
+}
+.react-datepicker .Mui-disabled .MuiSvgIcon-root{
+    color:darkgray !important;
+}
 .clearfix::after {
     content: "";
     clear: both;
