--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,3 +1,9 @@
 .Content {
-    margin-top: 72px;
+    margin-top: 32px;
 }
+@media screen and (min-width: 600px) {
+    .Content {
+        margin-top: 72px;
+    }
+  }
+  
